<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">EG@Calc</string>
    <string name="full_name">EG@Calc (EGA And EDD Calculator)</string>
    <string name="neag_name">Naegele</string>
    <string name="dr_name">Dre Method </string>
    <string name="from_lmp">From LMP</string>
    <string name="from_uss">From USS</string>
    <string name="calc_ega">Calculate EGA</string>
    <string name="calc_edd">Calculate EDD</string>
    <string name="calc">Calculate</string>
    <string name="ega">EGA</string>
    <string name="edd">EDD </string>
    <string name="from">From</string>
    <string name="title_activity_egat_dialog_picker_fragment">EGAtDialogPickerFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="s_lmp">Select LMP</string>
    <string name="s_ussedd">Select USS EDD</string>
    <string name="close">Close</string>
    <string name="ok">OK</string>
    <string name="wrongLMP">Please get serious LMP cannot be in the future</string>
    <string name="day">00</string>
    <string name="month">00</string>
    <string name="year">00</string>
    <string name="weeks">Week(s)</string>
    <string name="days">Day(s)</string>
    <string name="app_developed">Developed By MpIT, Pristine </string>
    <string name="app_developer">Developer:- Najim Seun Aromolaran</string>
    <string name="app_version">Version 1.0 Alpha</string>
    <string name="app_comment">Firstly, the app's name comes from 'ANDING' the corresponding letters in EDD and EGA giving EG@.
        This version uses Naegele's rule to calculate EDD although the obvious shortcoming of the rule is apparent.
        For example using Naegele's rule in calculting EDD from LMP of 8th March 2014 gives 15th Decemdber 2014, however adding 40wks o the LMP gives an an EDD of 12 December 2014 which is 3 days earlier. 
        Sebsequent versions of the application will use a more mordern approach, which is to  simply add 40wks to the lmp to get the EDD.  </string>
<string name="about">About</string>
</resources>