<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/neag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:inputType="none"
        android:padding="5dp"
        android:text="@string/neag_name"
        android:textColor="@color/red" />

    <LinearLayout
        android:id="@+id/myLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" >

        <EditText
            android:id="@+id/flmp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:inputType="none"
            android:text="@string/from_lmp"
            android:textColor="@color/trans_red" />

        <Button
            android:id="@+id/cega"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc_ega" />

        <Button
            android:id="@+id/cedd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/calc_edd" />

        <EditText
            android:id="@+id/fuss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:inputType="none"
            android:padding="5dp"
            android:paddingTop="20dp"
            android:text="@string/from_uss"
            android:textColor="@color/trans_red" />

        <Button
            android:id="@+id/cega_uss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/calc_ega" />

       

        <TextView
            android:id="@+id/spacer"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:textIsSelectable="false" />
        <Button 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/about_but" />        </LinearLayout>

</LinearLayout>