<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/popup_root_edd" >
    <TextView
        android:id="@+id/out_pu_tv"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.94"
        android:paddingBottom="30dp"
        android:textColor="@color/trans_red"
        android:textIsSelectable="true"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/out_dd"
        android:layout_width="fill_parent"
        android:layout_height="368dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="30dp"
            android:text="@string/day"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="30dp"
            android:text="@string/month"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="30dp"
            android:text="@string/year"
            android:textSize="35sp" />

    </LinearLayout>

    <Button
        android:id="@+id/out_ok_but"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingTop="30dp"
        android:text="@string/ok" />
    

</LinearLayout>